fixed some spacing issues

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -267,7 +267,11 @@ pre tt:after {
   
 }
 
-
+#content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 #right img {
   width: 50%; 
